# strong_si_units

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: gcc-build.yml
cmake/: feature_switches.cmake  project_options.cmake  project_warnings.cmake  sanitizers.cmake
include/: CMakeLists.txt  si_constants.hpp  util.hpp
include/big_int/: big_int.hpp  big_int64.hpp  big_int_std_integration.hpp  big_int_util.hpp
include/strong_type/: strong_decorators.hpp  strong_type.hpp
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt  constexpr_test.cpp  test.cpp  test_util.hpp
